fix: shift QR right to margin-left 50px

--- a/style.css
+++ b/style.css
@@ -251,7 +251,7 @@ body {
     width: 80px;
     height: 80px;
     justify-self: center;
-    margin-left: 40px;
+    margin-left: 50px;
 }
 
 .qr-svg {
